# rye-maturin-template

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/my_project/: __init__.py  _lowlevel.pyi
src/: lib.rs
