[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Elias Gabriel Amaral da Silva", email = "tolkiendili@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "my_project._lowlevel"
features = ["pyo3/extension-module"]

[project.scripts]
my-project = 'my_project:main'
